apps/base/angular-regular/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-app-angular
  labels:
    name: web
    app: app-angular
spec:
  replicas: 3
  selector:
      matchLabels:
        name: app-angular
  template:
    metadata:
      labels:
        name: app-angular
    spec:
      containers:
      - name: app-angular 
        image: haroldo89/front-app:69
        ports:
        - containerPort: 80
