apps/base/angular-regular/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-angular
  # namespace: mywebapp
  labels:
    name: app-angular
    app: mywebapp
spec:
  selector:
    name: app-angular 
  type: ClusterIP
  ports:
   - name: http
     port: 80
     targetPort: 80
     protocol: TCP
