apps/base/angular-regular/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app-angular
  # namespace: mywebapp
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  -  http:
       paths:
         - pathType: Prefix
           path: "/" 
           backend:
             service:
               name: service-app-angular
               port:
                 number: 80
